--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,164 @@
+/* font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
+/* base font in body */
 body {
-    color: red;
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+    ;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* common style */
+.container {
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+
+}
+
+/* top player style */
+.section-title {
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+}
+
+.top-players {
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    margin-bottom: 30px;
+}
+
+.player {
+    display: flex;
+    align-items: center;
+}
+
+.player img {
+    width: 56px;
+    height: 56px;
+}
+
+.player-name {
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+hr {
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+
+/***************************
+top blogs style 
+*********************/
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+    grid-column-gap: 46px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog .thamnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-info .blog-title {
+    font-size: 20px;
+}
+
+.blog-author {
+    color: #9F9F9F;
+
+}
+
+.blog-author a {
+    text-decoration: none;
+    color: #562EFF;
+    font-size: 16px;
+}
+
+/* style Lates Course */
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course {
+    border-radius: 5px;
+    border: solid rgb(250, 244, 247);
+    padding: 10px 10px 20px 10px;
+    box-shadow: 5px 5px 5px gray;
+}
+
+.course .course-bannar img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-detail {
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+.course-detail .course-title {
+
+    font-weight: 500;
+    font-size: 20px;
+    color: #1E1E1E;
+}
+
+.course-detail .course-author {
+
+    font-weight: 400;
+    font-size: 14px;
+    color: #ED6B4F;
+}
+
+.course-detail .gold-star {
+    color: goldenrod;
+    font-size: 13px;
+}
+
+.course-detail .gray-star,
+.rate {
+    color: #A2A2A2;
+}
+
+.course-detail .rate {
+    position: relative;
+    left: 10.71px;
+}
+
+.course-detail .time {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14.6913px;
+    color: #FF4A60;
+    position: relative;
+    left: 30.72px;
+    background-color: pink;
+    border-radius: 45%;
+    padding: 10px;
 }
